--- a/aula-flexbox/css/styles.css
+++ b/aula-flexbox/css/styles.css
@@ -1,20 +1,28 @@
 * {
   margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #bbb;
 }
 
 .container-dos-blocos{
-  height: 800px;
+  max-width: 960px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
 }
 
 .bloco {
-  width: 90px;
+  width: 280px;
   height: 200px;
   margin: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  background-color: #fff;
+
+}
+
+.bloco:hover {
+  border: 2px solid red;
+  
 }
